paramiko (1.16.0-2~precise0+exo1) precise; urgency=medium

  * Backport for Precise.
    + Drop dependency on python-ecdsa.

 -- Vincent Bernat <bernat@debian.org>  Fri, 17 Jun 2016 16:55:17 +0200

paramiko (1.16.0-1) unstable; urgency=medium

  * Imported Upstream version 1.16.0 (Closes: #816618)
  * Update debian/patches
  * Add Python pyasn1 and gssapi build depends (Closes: #804582)
  * Use upstream test script
  * Update debian/watch to use pypi.debian.net
  * Fix dh_auto_test override
  * Update Standards-Version to 3.9.7, no changes needed
  * Remove unneeded option

 -- Jeremy T. Bouse <jbouse@debian.org>  Mon, 11 Apr 2016 15:47:02 -0400

paramiko (1.15.3-1) unstable; urgency=medium

  * Imported Upstream version 1.15.3

 -- Jeremy T. Bouse <jbouse@debian.org>  Sun, 25 Oct 2015 22:46:34 -0400

paramiko (1.15.2-1) unstable; urgency=medium

  * Imported Upstream version 1.15.2
  * Update Standards-Version (no changes needed)

 -- Jeremy T. Bouse <jbouse@debian.org>  Wed, 08 Jul 2015 10:35:09 -0400

paramiko (1.15.1-1) unstable; urgency=medium

  * Imported Upstream version 1.15.1
  * Update gbp.conf section headers for newer version
  * Move from epydoc to sphinx for doc build
  * Add patch to localize generated documentation
  * Implement pybuild buildsystem
  * debian/gbp.conf: Update postbuild for git-buildpackage
  * Imported Upstream version 1.15.0
  * Specify minimum required version of ecdsa

 -- Jeremy T. Bouse <jbouse@debian.org>  Tue, 23 Sep 2014 14:07:59 -0400

paramiko (1.14.1-1) unstable; urgency=medium

  [ Thomas Kluyver ]
  * Add autopkgtest information

  [ Jeremy T. Bouse ]
  * Include upstream GitHub Pull Request #352 to fix RC bug.
    Thanks to Jelmer Vernooij <jelmer> (Closes: #750517, #755910)
  * Imported Upstream version 1.14.1
  * Revert "Include upstream GitHub Pull Request #352 to fix RC bug"
    as it was included in upstream bug fix release 1.14.1 to remove
    the regression introduced into 1.14.0.
