@@ -2,6 +2,7 @@ paramiko (1.16.0-2~precise0+exo1) precise; urgency=medium
 
   * Backport for Precise.
     + Drop dependency on python-ecdsa.
+    + Don't use dh-python for build.
 
  -- Vincent Bernat <bernat@debian.org>  Fri, 17 Jun 2016 16:55:17 +0200
 
